--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,13 @@ sarasas2.txt
 sarasas3.txt
 sarasas4.txt
 sarasas5.txt
+sarasas1-kietiakiai.txt
+sarasas1-vargsiukai.txt
+sarasas2-kietiakiai.txt
+sarasas2-vargsiukai.txt
+sarasas3-vargsiukai.txt
+sarasas3-kietiakiai.txt
+sarasas4-kietiakiai.txt
+sarasas4-vargsiukai.txt
+sarasas5-kietiakiai.txt
+sarasas5-vargsiukai.txt
